# monkey

./: .clang-format  .gitignore  CLAUDE.md  Makefile  compile_commands.json  meson.build  monkey
src/: lexer.c  lexer.h  main.c  repl.c  token.c  token.h
src/ast/: ast.c  ast.h
src/lexer/: lexer.c  lexer.h
src/repl/: repl.c  repl.h
src/token/: token.c  token.h
tests/: test_lexer.c
